6 JUN 2023 - 8:26 - Version 2, I suppose?
- The stopwatch works now.