@@ -5,6 +5,5 @@ This is a stopwatch. It's very straightforward, so this file will mostly be used
 UP NEXT:
 -I like the minimal look but it is a *little bit* ugly. I would like to make it fancier and possibly add support for color theming.
 FUTURE:
--List laps by the time passed between them instead of the overall time at which they ended
 -Keep track of fastest and slowest laps.
 -Possibly add other "normal web app clock" features? Like a timer? The sky is the limit, I suppose.
